# api_project_wakad_weekend_1130

./: README.md  api.ipynb  app.py  data.csv  godrej.csv  main.py  pyproject.toml  sbin.csv  utils.py
